; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_timer_duty_test.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_timer_duty_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@portTICK_RATE_MS = common dso_local global i32 0, align 4
@MCPWM_OPR_A = common dso_local global i32 0, align 4
@INITIAL_DUTY = common dso_local global i32 0, align 4
@MCPWM_OPR_B = common dso_local global i32 0, align 4
@MCPWM_DUTY_MODE_0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"mcpwm check = %f\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @timer_duty_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_duty_test(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @mcpwm_basic_config(i32 %9, i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* @portTICK_RATE_MS, align 4
  %15 = sdiv i32 1000, %14
  %16 = call i32 @vTaskDelay(i32 %15)
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* @MCPWM_OPR_A, align 4
  %20 = load i32, i32* @INITIAL_DUTY, align 4
  %21 = mul nsw i32 %20, 1
  %22 = sitofp i32 %21 to float
  %23 = call i32 @mcpwm_set_duty(i32 %17, i32 %18, i32 %19, float %22)
  %24 = call i32 @TEST_ESP_OK(i32 %23)
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* @MCPWM_OPR_B, align 4
  %28 = load i32, i32* @INITIAL_DUTY, align 4
  %29 = mul nsw i32 %28, 2
  %30 = sitofp i32 %29 to float
  %31 = call i32 @mcpwm_set_duty(i32 %25, i32 %26, i32 %27, float %30)
  %32 = call i32 @TEST_ESP_OK(i32 %31)
  %33 = load i32, i32* %5, align 4
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* @MCPWM_OPR_A, align 4
  %36 = call double @mcpwm_get_duty(i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* @INITIAL_DUTY, align 4
  %38 = mul nsw i32 %37, 1
  %39 = call i32 @TEST_ASSERT_EQUAL_INT(double %36, i32 %38)
  %40 = load i32, i32* %5, align 4
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* @MCPWM_OPR_B, align 4
  %43 = call double @mcpwm_get_duty(i32 %40, i32 %41, i32 %42)
  %44 = load i32, i32* @INITIAL_DUTY, align 4
  %45 = mul nsw i32 %44, 2
  %46 = call i32 @TEST_ASSERT_EQUAL_INT(double %43, i32 %45)
  %47 = load i32, i32* @portTICK_RATE_MS, align 4
  %48 = sdiv i32 1000, %47
  %49 = call i32 @vTaskDelay(i32 %48)
  %50 = load i32, i32* %5, align 4
  %51 = load i32, i32* %8, align 4
  %52 = load i32, i32* @MCPWM_OPR_A, align 4
  %53 = call i32 @mcpwm_set_duty(i32 %50, i32 %51, i32 %52, float 5.550000e+01)
  %54 = load i32, i32* %5, align 4
  %55 = load i32, i32* %8, align 4
  %56 = load i32, i32* @MCPWM_OPR_A, align 4
  %57 = load i32, i32* @MCPWM_DUTY_MODE_0, align 4
  %58 = call i32 @mcpwm_set_duty_type(i32 %54, i32 %55, i32 %56, i32 %57)
  %59 = load i32, i32* %5, align 4
  %60 = load i32, i32* %8, align 4
  %61 = load i32, i32* @MCPWM_OPR_A, align 4
  %62 = call double @mcpwm_get_duty(i32 %59, i32 %60, i32 %61)
  %63 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), double %62)
  %64 = load i32, i32* %5, align 4
  %65 = load i32, i32* %8, align 4
  %66 = load i32, i32* @MCPWM_OPR_B, align 4
  %67 = call i32 @mcpwm_set_duty_in_us(i32 %64, i32 %65, i32 %66, i32 500)
  %68 = load i32, i32* %5, align 4
  %69 = load i32, i32* %8, align 4
  %70 = load i32, i32* @MCPWM_OPR_B, align 4
  %71 = call double @mcpwm_get_duty(i32 %68, i32 %69, i32 %70)
  %72 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), double %71)
  %73 = load i32, i32* @portTICK_RATE_MS, align 4
  %74 = sdiv i32 1000, %73
  %75 = call i32 @vTaskDelay(i32 %74)
  ret void
}

declare dso_local i32 @mcpwm_basic_config(i32, i32, i32, i32) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @TEST_ESP_OK(i32) #1

declare dso_local i32 @mcpwm_set_duty(i32, i32, i32, float) #1

declare dso_local i32 @TEST_ASSERT_EQUAL_INT(double, i32) #1

declare dso_local double @mcpwm_get_duty(i32, i32, i32) #1

declare dso_local i32 @mcpwm_set_duty_type(i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*, double) #1

declare dso_local i32 @mcpwm_set_duty_in_us(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
